--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ script:
   - git init
   - git config user.name "baboo"
   - git config user.email "1572814701@qq.com"
-  - git branch -m master main
   - git add .
   - git commit -m "update note"
-  - git push --force https://$B_TOKEN@github.com/Paper-kite/notebook.git origin main 
+  - git push --force https://$B_TOKEN@github.com/Paper-kite/notebook.git master 
